[gd_scene load_steps=3 format=3 uid="uid://dbemdtpehrfrk"]

[ext_resource type="Script" uid="uid://dqwrocgbicvkh" path="res://options_menu.gd" id="1_lbr8e"]
[ext_resource type="Script" uid="uid://d3v73gwwyt005" path="res://script/volume_slider.gd" id="2_t1lix"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbr8e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 233.0
offset_right = 701.0
offset_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 12.0
script = ExtResource("2_t1lix")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
